Removed an overflow an issue

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -149,6 +149,7 @@ div[id="___gatsby"],
 div[role="group"][tabindex],
 #layout-wrapper
   height: 100%
+  overflow-x: hidden
 
 #layout-wrapper
   width: 100%
